<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/theme_bg"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <ImageView
        android:layout_margin="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_launcher"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/rounded_nb"
        android:backgroundTint="@color/theme_card"
        android:orientation="vertical"
        android:padding="12dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="16dp"
            android:background="@drawable/rounded_nb"
            android:backgroundTint="@color/theme_bg"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/theme_blue"
            android:textSize="32sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="12dp"
            android:backgroundTint="@color/theme_button"
            android:text="@string/solo"
            android:textSize="18sp" />
        <Button
            android:id="@+id/btn_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="12dp"
            android:backgroundTint="@color/theme_button"
            android:text="@string/local"
            android:textSize="18sp" />
        <Button
            android:id="@+id/btn_online_friendly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="12dp"
            android:backgroundTint="@color/theme_button"
            android:text="@string/online_friendly"
            android:textSize="18sp" />
        <Button
            android:id="@+id/btn_online_ranked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="12dp"
            android:backgroundTint="@color/theme_button"
            android:text="@string/online"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>